Update colors and image

--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
     <div class="column">
       <p>Cris Hernández is a typeface designer and researcher with a practice centered on supporting the Indigenous languages and writing systems of North America.</p>
       <p class="linebreak">Working from Brooklyn; Lenapehoking, the unceded homeland of the Lenape people.</p>
-      <!-- <p class="linebreak">For inquiries and general messages, please send an email to <a href="mailto:crisrhernandez@gmail.com">crisrhernandez@gmail.com</a>.</p>
-      <p class="linebreak"><a href="https://www.instagram.com/crisrhernandez">Instagram</a></p> -->
     </div>
     <div class="column">
       <p>Current engagement/s...</p>
@@ -22,12 +20,15 @@
 <!--       <p>Que Queda Type (coming soon)</p> -->
     </div>
     <div class="column">
+      <img style="display:block;" width="100%" height="100%" src="images/Unicode_FanArt.png" alt="Unicode_FanArt">
+    </div>
+    <div class="column">
       <p>For inquiries and general messages, please send an email to <a href="mailto:crisrhernandez@gmail.com">crisrhernandez@gmail.com</a>.</p>
-      <p class="linebreak"><a href="https://www.instagram.com/crisrhernandez">Instagram</a></p>
+      <p class="linebreak">Other links: <a href="https://www.instagram.com/crisrhernandez">Instagram</a></p>
     </div>
   </div>
   <footer>
-    <p>&copy; 2024 Cris R Hernández</p>
+    <p>&copy; 2025 Cris R Hernández</p>
   </footer>
   </body>
 </body>
