Add activity log

--- a/index.html
+++ b/index.html
@@ -17,10 +17,32 @@
     <div class="column">
       <p>Current engagement/s...</p>
       <p><a href="https://www.typotheque.com/research/north-american-research">Typotheque Indigenous North American Type</a></p>
-<!--       <p>Que Queda Type (coming soon)</p> -->
+      <!-- <p>Unicode Community Engagement Team</p> -->
+      <!-- <p class="linebreak">Past...</p>
+      <p><a href="https://www.sharptype.co/case-studies/sharp-earth-case-study">Sharp Earth, North American support</a></p> -->
+      <!-- <p>Mon-Latin Type Collaboration</p> -->
+      <!-- <p>Que Queda Type (coming soon)</p> -->
     </div>
     <div class="column">
-      <img style="display:block;" width="100%" height="100%" src="images/Unicode_FanArt.png" alt="Unicode_FanArt">
+      <p>Activity Log</p>
+      <div class="activitylog">
+        <!-- <p><span class="soon">!!!</span> CGDC: Cold Style (Chicago) <span class="round">organizer</span> 5/28</p> -->
+        <p><a href="https://www.eventbrite.com/e/multilingue-2025-tickets-1301641598059"><span class="soon">!!!</span> Multilingüe 2.0 w/ INAT Team (virtual) <span class="round_new">talk</span> 5/23</a></p>
+        <p>CGDC: Cold Style (Chicago) <span class="round">organizer</span> <span class="round">talk</span> 1/25</p>
+        <!-- <p>CSU, Type Design - Hrant H. Papazian (LA) <span class="round">talk</span> 11/24</p> -->
+        <p>Letrastica 5 Open Forum (Guadalajara) <span class="round">talk</span> 10/24</p>
+        <!-- <p>St. John's, Typography - Kyla Paolucci (NYC) <span class="round">guest crit</span> 3/24</p>
+        <p>CSU, Type Design - Hrant H. Papazian (LA) <span class="round">talk</span> 11/23</p> -->
+        <p>TypeLab w/ Connor Davenport (NYC) <span class="round">talk</span> 6/23</p>
+        <p>Seminario de Estudios Tipográficos BUAP (Puebla) <span class="round">talk</span> 4/23</p>
+        <p>Chelas & Tipos Xalapa (Xalapa) <span class="round">talk</span> 2/23</p>
+        <p>Type Thursday MXC (Mexico City) <span class="round">talk</span> 2/23</p>
+        <p>Typefobia (Puebla) <span class="round">talk</span> 2/23</p>
+        <p>Letrastica 4 Open Forum (Guadalajara) <span class="round">talk</span> 10/22</p>
+        <!-- <p>CUNY, Typography - Juan Villanueva (NYC) <span class="round">guest crit</span> 2/19</p> -->
+        <!-- <p>Type@Cooper, Extended Program (NYC) <span class="round">school</span> 8/19</p> -->
+        <!-- <p>CalArts, BFA in Graphic Design (Santa Clarita) <span class="round">school</span> 5/17</p> -->
+      </div>
     </div>
     <div class="column">
       <p>For inquiries and general messages, please send an email to <a href="mailto:crisrhernandez@gmail.com">crisrhernandez@gmail.com</a>.</p>
