Update activity log

--- a/index.html
+++ b/index.html
@@ -28,15 +28,16 @@
       <div class="activitylog">
         <!-- <p><span class="soon">!!!</span> CGDC: Cold Style (Chicago) <span class="round">organizer</span> 5/28</p> -->
         <p><a href="https://www.eventbrite.com/e/multilingue-2025-tickets-1301641598059"><span class="soon">!!!</span> Multilingüe 2.0 w/ INAT Team (virtual) <span class="round_new">talk</span> 5/23</a></p>
-        <p>CGDC: Cold Style (Chicago) <span class="round">organizer</span> <span class="round">talk</span> 1/25</p>
+        <p><a href="https://open.spotify.com/episode/2dxiLp3hDGMx3QGxBop0SL?si=pSaNqZnaTRa5uHN6BxGxvQ" class="past_event_link">Underscore Podcast Ep.74 <span class="round">episode</span> 2/25</a></p>
+        <p><a href="https://chicagographicdesign.club/programming/cold-style/" class="past_event_link">CGDC: Cold Style (Chicago) <span class="round">organizer</span> <span class="round">talk</span> 2/25</a></p>
         <!-- <p>CSU, Type Design - Hrant H. Papazian (LA) <span class="round">talk</span> 11/24</p> -->
         <p>Letrastica 5 Open Forum (Guadalajara) <span class="round">talk</span> 10/24</p>
         <!-- <p>St. John's, Typography - Kyla Paolucci (NYC) <span class="round">guest crit</span> 3/24</p>
         <p>CSU, Type Design - Hrant H. Papazian (LA) <span class="round">talk</span> 11/23</p> -->
-        <p>TypeLab w/ Connor Davenport (NYC) <span class="round">talk</span> 6/23</p>
+        <p><a href="https://2023.typographics.com/typelab/#1754" class="past_event_link">TypeLab w/ Connor Davenport (NYC) <span class="round">talk</span> 6/23</a></p>
         <p>Seminario de Estudios Tipográficos BUAP (Puebla) <span class="round">talk</span> 4/23</p>
         <p>Chelas & Tipos Xalapa (Xalapa) <span class="round">talk</span> 2/23</p>
-        <p>Type Thursday MXC (Mexico City) <span class="round">talk</span> 2/23</p>
+        <p>Type Thursday MXC (CDMX) <span class="round">talk</span> 2/23</p>
         <p>Typefobia (Puebla) <span class="round">talk</span> 2/23</p>
         <p>Letrastica 4 Open Forum (Guadalajara) <span class="round">talk</span> 10/22</p>
         <!-- <p>CUNY, Typography - Juan Villanueva (NYC) <span class="round">guest crit</span> 2/19</p> -->
