Update activity log

--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
     <div class="column">
       <p>Cris Hernández is a typeface designer and researcher with a practice centered on supporting the Indigenous languages and writing systems of North America.</p>
       <p class="linebreak">Working from Brooklyn; Lenapehoking, the unceded homeland of the Lenape people.</p>
+      <!-- <p class="linebreak">Seeking work related to education, language revitalization, and public service.</p> -->
     </div>
     <div class="column">
       <p>Current engagement/s...</p>
       <p><a href="https://www.typotheque.com/research/north-american-research">Typotheque Indigenous North American Type</a></p>
-      <!-- <p>Unicode Community Engagement Team</p> -->
+      <!-- <p>Que Queda Type (coming soon)</p> -->
+      <!-- <p>Mon-Latin Type Collaboration</p> -->
       <!-- <p class="linebreak">Past...</p>
       <p><a href="https://www.sharptype.co/case-studies/sharp-earth-case-study">Sharp Earth, North American support</a></p> -->
-      <!-- <p>Mon-Latin Type Collaboration</p> -->
-      <!-- <p>Que Queda Type (coming soon)</p> -->
     </div>
     <div class="column">
       <p>Activity Log</p>
       <div class="activitylog">
-        <p><a href="https://chicagographicdesign.club/programming/cold-style-02/"><span class="soon">!!!</span> CGDC: Cold Style (Chicago) <span class="round_new">organizer</span> 5/28</a></p>
-        <p><a href="https://www.eventbrite.com/e/multilingue-2025-tickets-1301641598059"><span class="soon">!!!</span> Multilingüe 2.0 w/ INAT Team (virtual) <span class="round_new">talk</span> 5/23</a></p>
+        <p><a href="https://chicagographicdesign.club/programming/cold-style-02/"><span class="soon">!!!</span> CGDC: Cold Style (Chicago) <span class="round_new">organizer</span> 5/28/25</a></p>
+        <p><a href="https://www.eventbrite.com/e/multilingue-2025-tickets-1301641598059" class="past_event_link">Multilingüe 2.0 w/ INAT Team (virtual) <span class="round">talk</span> 5/25</a></p>
         <p><a href="https://open.spotify.com/episode/2dxiLp3hDGMx3QGxBop0SL?si=pSaNqZnaTRa5uHN6BxGxvQ" class="past_event_link">Underscore Podcast Ep.74 <span class="round">episode</span> 2/25</a></p>
         <p><a href="https://chicagographicdesign.club/programming/cold-style/" class="past_event_link">CGDC: Cold Style (Chicago) <span class="round">organizer</span> <span class="round">talk</span> 2/25</a></p>
         <!-- <p>CSU, Type Design - Hrant H. Papazian (LA) <span class="round">talk</span> 11/24</p> -->
