Update activity log

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <div class="column">
       <p>Activity Log</p>
       <div class="activitylog">
-        <p><a href="https://chicagographicdesign.club/programming/cold-style-02/"><span class="soon">!!!</span> CGDC: Cold Style (Chicago) <span class="round_new">organizer</span> 5/28/25</a></p>
-        <p><a href="https://www.eventbrite.com/e/multilingue-2025-tickets-1301641598059" class="past_event_link">Multilingüe 2.0 w/ INAT Team (virtual) <span class="round">talk</span> 5/25</a></p>
-        <p><a href="https://open.spotify.com/episode/2dxiLp3hDGMx3QGxBop0SL?si=pSaNqZnaTRa5uHN6BxGxvQ" class="past_event_link">Underscore Podcast Ep.74 <span class="round">episode</span> 2/25</a></p>
+        <p><a href="https://chicagographicdesign.club/programming/cold-style-02/" class="past_event_link">CGDC: Cold Style (Chicago) <span class="round">organizer</span> 5/25</a></p>
+        <p><a href="https://www.youtube.com/watch?v=vEKdSyJ4mvY" class="past_event_link">Multilingüe 2.0 w/ INAT Team (virtual) <span class="round">talk</span> 5/25 <span class="round_play">video</span></a></p>
+        <p><a href="https://open.spotify.com/episode/2dxiLp3hDGMx3QGxBop0SL?si=pSaNqZnaTRa5uHN6BxGxvQ" class="past_event_link">Underscore Podcast Ep.74 <span class="round">episode</span> 2/25 <span class="round_play">audio</span></a></p>
         <p><a href="https://chicagographicdesign.club/programming/cold-style/" class="past_event_link">CGDC: Cold Style (Chicago) <span class="round">organizer</span> <span class="round">talk</span> 2/25</a></p>
         <!-- <p>CSU, Type Design - Hrant H. Papazian (LA) <span class="round">talk</span> 11/24</p> -->
         <!-- <p>TypeWest, instructor: Ro Hernández (virtual) <span class="round">talk</span> 8/24</p> -->
