Add work status

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
     <div class="column">
       <p>Cris Hernández is a typeface designer and researcher with a practice centered on supporting the Indigenous languages and writing systems of North America.</p>
       <p class="linebreak">Working from Brooklyn; Lenapehoking, the unceded homeland of the Lenape people.</p>
-      <!-- <p class="linebreak">Seeking work related to education, language revitalization, and public service.</p> -->
     </div>
     <div class="column">
-      <p>Current engagement/s...</p>
+      <!-- <p>Current engagement/s...</p> -->
+      <p>Selected projects</p>
       <p><a href="https://www.typotheque.com/research/north-american-research">Typotheque Indigenous North American Type</a></p>
+      <p class="linebreak"><span class="bulletin">▲ Currently seeking work related to education, language revitalization, and public service.</span></p>
       <!-- <p>Que Queda Type (coming soon)</p> -->
       <!-- <p>Mon-Latin Type Collaboration</p> -->
       <!-- <p class="linebreak">Past...</p>
