--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
   <div class="container">
     <div class="column">
       <p>Cris Hernández is a typeface designer and researcher with a practice centered on supporting the Indigenous languages and writing systems of North America.</p>
+      <p class="linebreak">Que Queda Type (Spanish for 'what remains') is a new foundry currently in development. It is focused on releasing typefaces that support the languages of North America, with a long-term goal of broadening its reach to Central and South America.</p>
       <p class="linebreak">Working from Brooklyn; Lenapehoking, the unceded homeland of the Lenape people.</p>
     </div>
     <div class="column">
-      <!-- <p>Current engagement/s...</p> -->
-      <p>Selected projects</p>
+      <p>Current engagement/s...</p>
+      <p><a href="https://www.instagram.com/quequedatype">Que Queda Type (coming soon)</a></p>
+      <p class="linebreak">Selected projects</p>
       <p><a href="https://www.typotheque.com/research/north-american-research">Typotheque Indigenous North American Type</a></p>
       <p class="linebreak"><span class="bulletin">▲ Currently seeking work related to education, language revitalization, and public service.</span></p>
-      <!-- <p>Que Queda Type (coming soon)</p> -->
       <!-- <p>Mon-Latin Type Collaboration</p> -->
       <!-- <p class="linebreak">Past...</p>
       <p><a href="https://www.sharptype.co/case-studies/sharp-earth-case-study">Sharp Earth, North American support</a></p> -->
