--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="container">
     <div class="column">
       <p>Cris Hernández is a typeface designer and researcher with a practice centered on supporting the Indigenous languages and writing systems of North America.</p>
-      <p class="linebreak">Que Queda Type (Spanish for 'what remains') is a new foundry currently in development. It is focused on releasing typefaces that support the languages of North America, with a long-term goal of broadening its reach to Central and South America.</p>
+      <p class="linebreak">Que Queda Type (Spanish for 'what remains') is a new foundry currently in development, with typefaces that reflect this commitment and a long-term goal of expanding its reach to Central and South America.</p>
       <p class="linebreak">Working from Brooklyn; Lenapehoking, the unceded homeland of the Lenape people.</p>
     </div>
     <div class="column">
