Update activity log

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <p>Typefobia (Puebla) <span class="round">talk</span> 2/23</p>
         <p>Letrastica 4 Open Forum (Guadalajara) <span class="round">talk</span> 10/22</p>
         <!-- <p>CUNY, Typography - Juan Villanueva (NYC) <span class="round">guest crit</span> 2/19</p> -->
-        <p>Type@Cooper, Extended Program (NYC) <span class="round">school</span> 8/19</p>
+        <p>Type@Cooper Extended Program (NYC) <span class="round">school</span> 8/19</p>
         <p>CalArts, BFA in Graphic Design (Santa Clarita) <span class="round">school</span> 5/17</p>
       </div>
     </div>
