--- a/index.html
+++ b/index.html
@@ -19,8 +19,15 @@
       <p><a href="https://www.instagram.com/quequedatype">Que Queda Type (coming soon)</a></p>
       <p class="linebreak">Selected projects</p>
       <p><a href="https://www.typotheque.com/research/north-american-research">Typotheque Indigenous North American Type</a></p>
-      <p class="linebreak"><span class="bulletin"><span class="loading-dots">Seeking opportunities related to education, language support, and public service<span class="dots"></span></span>
-</span></p>
+      <p class="linebreak">
+        <span class="bulletin">
+          <span class="loading-dots">
+            Seeking opportunities related to education, language support, and public service
+            <span class="dots">
+            </span>
+          </span>
+        </span>
+      </p>
       <!-- <p>Mon-Latin Type Collaboration</p> -->
       <!-- <p class="linebreak">Past...</p>
       <p><a href="https://www.sharptype.co/case-studies/sharp-earth-case-study">Sharp Earth, North American support</a></p> -->
