--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <p><a href="https://www.instagram.com/quequedatype">Que Queda Type (coming soon)</a></p>
       <p class="linebreak">Selected projects</p>
       <p><a href="https://www.typotheque.com/research/north-american-research">Typotheque Indigenous North American Type</a></p>
-      <p class="linebreak"><span class="bulletin">▲ Seeking opportunities related to education, language support, and public service.</span></p>
+      <!-- <p class="linebreak"><span class="bulletin">▲ Seeking opportunities related to education, language support, and public service.</span></p> -->
       <!-- <p>Mon-Latin Type Collaboration</p> -->
       <!-- <p class="linebreak">Past...</p>
       <p><a href="https://www.sharptype.co/case-studies/sharp-earth-case-study">Sharp Earth, North American support</a></p> -->
@@ -48,7 +48,8 @@
       </div>
     </div>
     <div class="column">
-      <p>For inquiries and general messages, please send an email to <a href="mailto:crisrhernandez@gmail.com">crisrhernandez@gmail.com</a>.</p>
+      <p><span class="bulletin"><b>Available for work.</b> Seeking opportunities related to education, language support, and public service.</span></p>
+      <p class="linebreak">For inquiries and general messages, please send an email to <a href="mailto:crisrhernandez@gmail.com">crisrhernandez@gmail.com</a>.</p>
       <p class="linebreak">Other links: <a href="https://www.instagram.com/crisrhernandez">Instagram</a></p>
     </div>
   </div>
