Update bio and bulletin text

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <div class="container">
     <div class="column">
       <p>Cris Hernández is a typeface designer and researcher with a practice centered on supporting the Indigenous languages and writing systems of North America.</p>
-      <p class="linebreak">Que Queda Type (Spanish for 'what remains') is a new foundry currently in development, with typefaces that reflect this commitment and a long-term goal of expanding its reach to Central and South America.</p>
+      <p class="linebreak">Seeking to work collaboratively with communities to address challenges in typographic representation.</p>
+      <p class="linebreak">Que Queda Type (Spanish for 'what remains') is a new foundry currently in development, aiming to provide typefaces that reflect these efforts.</p>
       <p class="linebreak">Working from Brooklyn; Lenapehoking, the unceded homeland of the Lenape people.</p>
     </div>
     <div class="column">
@@ -19,7 +20,6 @@
       <p><a href="https://www.instagram.com/quequedatype">Que Queda Type (coming soon)</a></p>
       <p class="linebreak">Selected projects</p>
       <p><a href="https://www.typotheque.com/research/north-american-research">Typotheque Indigenous North American Type</a></p>
-      <!-- <p class="linebreak"><span class="bulletin">▲ Seeking opportunities related to education, language support, and public service.</span></p> -->
       <!-- <p>Mon-Latin Type Collaboration</p> -->
       <!-- <p class="linebreak">Past...</p>
       <p><a href="https://www.sharptype.co/case-studies/sharp-earth-case-study">Sharp Earth, North American support</a></p> -->
@@ -48,7 +48,7 @@
       </div>
     </div>
     <div class="column">
-      <p><span class="bulletin"><b>Available for work.</b> Seeking opportunities related to education, language support, and public service.</span></p>
+      <p><span class="bulletin"><b>Available for work</b></span></p>
       <p class="linebreak">For inquiries and general messages, please send an email to <a href="mailto:crisrhernandez@gmail.com">crisrhernandez@gmail.com</a>.</p>
       <p class="linebreak">Other links: <a href="https://www.instagram.com/crisrhernandez">Instagram</a></p>
     </div>
